# SimpleFib

./: .gitignore  pyproject.toml  run.py
simplefib/: cli.py  db.py  fib.py  predict.py  uid.py  validators.py
